--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -7,6 +7,9 @@
   </head>
   <body>
     <h1>Dynamic Quote Generator</h1>
+    <select id="categoryFilter" onchange="filterQuotes()">
+      <option value="all">All Categories</option>
+    </select>
 
     <div id="quoteDisplay"></div>
     <button id="newQuote">Show New Quote</button>
